Fix permalink icon alignment in IE7

--- a/projects/vector-icons/dev/css/status.styl
+++ b/projects/vector-icons/dev/css/status.styl
@@ -96,30 +96,30 @@ size(size)
 
 .massrel-permalink-logo
   margin-left size(3)
+  vertical-align size(-1.5)
+
+  // IE7 aligns them too far down
+  *vertical-align size(-0.5)
 
 .massrel-details-logo
   margin-right size(3)
 
 .massrel-permalink-logo-twitter
   font-size size(16)
-  vertical-align size(-1.5)
   color #08bcef
 
 .massrel-permalink-logo-facebook
   font-size size(17)
-  vertical-align size(-1.5)
   color #3b5998
 
 .massrel-permalink-logo-instagram,
 .massrel-details-logo-instagram
   font-size size(17)
-  vertical-align size(-1.5)
   color #4d3e34
 
 .massrel-permalink-logo-google,
 .massrel-details-logo-google
   font-size size(17)
-  vertical-align size(-1.5)
   color #dd4b39
 
 .massrel-author
